Fix login menu & not showing All Campgrounds links

--- a/server/client/src/components/NewCampgroundForm/NewCampgroundForm.scss
+++ b/server/client/src/components/NewCampgroundForm/NewCampgroundForm.scss
@@ -3,6 +3,7 @@
 
 .NewCampgroundForm {
     margin-top: 6rem;
+    margin-bottom: 6rem;
     width: 50%;
     color: $color-primary;
     display: flex;
