--- a/server/client/src/components/UIElements/Modal.scss
+++ b/server/client/src/components/UIElements/Modal.scss
@@ -10,6 +10,10 @@
     background: white;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     font-family: 'Lato', sans-serif;
+
+    @media (max-width: 1100px) {
+        top: 10vh;
+    }
 }
 
 .Modal__header {
